# goit-datascince-hw-01

./: Dockerfile  personal_assistant.py  pyproject.toml  requirements.txt
